@@ -1,0 +1,16 @@
+ROOT = $(DESTDIR)/usr/share/doc/files-override-misplaced
+
+default:
+	:
+
+install:
+	mkdir -p $(DESTDIR)/usr/share/doc/files-override-misplaced
+	echo 'files-override-misplaced: some-override' \
+	    > $(DESTDIR)/usr/share/doc/files-override-misplaced/override.lintian
+	echo 'files-override-misplaced: some-override' \
+	    > $(DESTDIR)/usr/share/doc/files-override-misplaced/override.Lintian
+	gzip -9 $(DESTDIR)/usr/share/doc/files-override-misplaced/override.Lintian
+	mkdir -p $(DESTDIR)/usr/share/lintian/overrides/files-override-misplaced
+	touch $(DESTDIR)/usr/share/lintian/overrides/files-override-misplaced/some-override
+
+.PHONY: clean distclean realclean install check test
