@@ -1,0 +1,3 @@
+E: files-override-misplaced: override-file-in-wrong-location usr/share/doc/files-override-misplaced/override.Lintian.gz
+E: files-override-misplaced: override-file-in-wrong-location usr/share/doc/files-override-misplaced/override.lintian
+E: files-override-misplaced: override-file-in-wrong-location usr/share/lintian/overrides/files-override-misplaced/some-override
